objects/pse__Est_Vs_Actuals__c.object
<CustomObject>
    <customHelpPage>pse__EstimateVsActualsHelp</customHelpPage>
    <description>Compares the estimated and actual hours worked by a resource on an assignment, derived from scheduled hours and entered timecard hours respectively. FinancialForce PSA generates Est Vs Actuals when you create or update assignments and schedules, and when timecard hours are entered for an assignment.</description>
    <fields>
        <fullName>psa_report__Actual_Billings__c</fullName>
        <formula>pse__Actual_Billable_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>psa_report__EvA_Variance__c</fullName>
        <formula>if( psa_report__Scheduled_Billings__c = 0.0, 0.0, pse__Actual_Billable_Amount__c / psa_report__Scheduled_Billings__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EvA Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>psa_report__Scheduled_Billings__c</fullName>
        <formula>if ( pse__Scheduled_Bill_Rate_is_Daily_Rate__c = &apos;true&apos; , pse__Scheduled_Bill_Rate__c * pse__Estimated_Days__c,pse__Scheduled_Bill_Rate__c * pse__Estimated_Hours__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Average_Bill_Rate__c</fullName>
        <description>Actual Billable Amount divided by Actual Hours or Actual Days as appropriate</description>
        <formula>IF(OR(pse__Actual_Days__c = 0, pse__Actual_Hours__c = 0), 0, IF ( pse__Assignment__r.pse__Daily_Bill_Rate__c, (pse__Actual_Billable_Amount__c / pse__Actual_Days__c), (pse__Actual_Billable_Amount__c / pse__Actual_Hours__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Billable Amount divided by Actual Hours or Actual Days as appropriate</inlineHelpText>
        <label>Actual Average Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Billable_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The billable amount of timecard hours</description>
        <inlineHelpText>The billable amount of timecard hours</inlineHelpText>
        <label>Actual Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Days_Aggregated__c</fullName>
        <description>Actual number of days worked in the time period based on aggregated timecards by week.</description>
        <inlineHelpText>Actual number of days worked in the time period based on aggregated timecards by week.</inlineHelpText>
        <label>Actual Days (Aggregated)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Days__c</fullName>
        <inlineHelpText>Actual number of days worked in the time period</inlineHelpText>
        <label>Actual Days</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Hours__c</fullName>
        <inlineHelpText>The number of hours entered on timecards</inlineHelpText>
        <label>Actual Hours</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Est Vs Actuals</relationshipLabel>
        <relationshipName>Est_Vs_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Days_Percent_Variance__c</fullName>
        <formula>IF(pse__Estimated_Days__c=0,0,(pse__Actual_Days__c - pse__Estimated_Days__c) / pse__Estimated_Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Percent Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Days_Variance__c</fullName>
        <formula>pse__Actual_Days__c - pse__Estimated_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Variance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <description>End date of the time period for this record. This should not be confused with the end date of the associated assignment or timecards.</description>
        <inlineHelpText>End date of the time period for this record. This should not be confused with the end date of the associated assignment or timecards.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Days__c</fullName>
        <inlineHelpText>The number of days scheduled for work during the time period</inlineHelpText>
        <label>Estimated Days</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Hours__c</fullName>
        <inlineHelpText>The number of hours scheduled</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Variance__c</fullName>
        <formula>IF(pse__Estimated_Hours__c != 0,(pse__Actual_Hours__c - pse__Estimated_Hours__c) / pse__Estimated_Hours__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Percent Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Project_Currency_Exchange_Rate__c</fullName>
        <description>Project (bill rate) exchange rate, relative to corporate currency, calculated on the end date of the schedule.</description>
        <inlineHelpText>Project (bill rate) exchange rate, relative to corporate currency, calculated on the end date of the schedule.</inlineHelpText>
        <label>Project Currency Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to the project manager for the project. This allows for easier workflow alerts to be sent</description>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Est Vs Actuals (Project Manager)</relationshipLabel>
        <relationshipName>Est_Vs_Actuals_Project_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Est Vs Actuals</relationshipLabel>
        <relationshipName>Est_Vs_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Bill_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The bill rate amount for the requested resource.</description>
        <inlineHelpText>The bill rate amount for the requested resource.</inlineHelpText>
        <label>Resource Request Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Days__c</fullName>
        <description>The number of requested days scheduled for the work on the held resource request during the time period.</description>
        <inlineHelpText>The number of requested days scheduled for the work on the held resource request during the time period.</inlineHelpText>
        <label>Resource Request Days</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Hours__c</fullName>
        <description>The number of requested hours scheduled on the held resource request.</description>
        <inlineHelpText>The number of requested hours scheduled on the held resource request.</inlineHelpText>
        <label>Resource Request Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the held resource request relating to this Estimates Versus Actuals record.</description>
        <inlineHelpText>Lookup to the held resource request relating to this Estimates Versus Actuals record.</inlineHelpText>
        <label>Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Estimates Versus Actuals</relationshipLabel>
        <relationshipName>Estimates_Versus_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to the resource record for the assignment. This allows for easier workflow alerts to be sent</description>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Est Vs Actuals</relationshipLabel>
        <relationshipName>Est_Vs_Actuals_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Bill_Rate__c</fullName>
        <formula>pse__Assignment__r.pse__Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Bill rate from the Assignment</inlineHelpText>
        <label>Scheduled Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Bill_Rate_is_Daily_Rate__c</fullName>
        <formula>IF(pse__Assignment__r.pse__Daily_Bill_Rate__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Bill Rate is Daily Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <description>Start date of the time period for this record. This should not be confused with the start date of the associated assignment or timecards.</description>
        <inlineHelpText>Start date of the time period for this record. This should not be confused with the start date of the associated assignment or timecards.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period_Type__c</fullName>
        <description>The type of time period this time span represents</description>
        <inlineHelpText>The type of time period this time span represents</inlineHelpText>
        <label>Time Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated time period</description>
        <inlineHelpText>The associated time period</inlineHelpText>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Est Vs Actuals</relationshipLabel>
        <relationshipName>Est_Vs_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Timecards_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is any associated timecard submitted?</inlineHelpText>
        <label>Timecards Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Variance__c</fullName>
        <formula>pse__Actual_Hours__c - pse__Estimated_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount of variance in hours</inlineHelpText>
        <label>Hours Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Est Vs Actuals</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>pse__Estimated_Hours__c</columns>
        <columns>pse__Actual_Hours__c</columns>
        <columns>pse__Variance__c</columns>
        <columns>pse__Percent_Variance__c</columns>
        <columns>pse__Timecards_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Est Vs Actuals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Est Vs Actuals</pluralLabel>
    <recordTypes>
        <fullName>TR_PS_Enterprise_Est_Vs_Actuals</fullName>
        <active>true</active>
        <label>TR PS Enterprise Est Vs Actuals</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Assignment_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(pse__Assignment__c), ISBLANK(pse__Resource_Request__c))</errorConditionFormula>
        <errorMessage>The estimates versus actuals comparison record requires either an assignment or a resource request.</errorMessage>
    </validationRules>
</CustomObject>